# qt.license-search

./: .gitignore  CMakeLists.txt  Makefile  README.md  license-search.desktop  main.cpp  mainwindow.cpp  mainwindow.h
LicenceInfoManage/: LicenceInfoManage.cpp  LicenceInfoManage.h
LicenceInfoObject/: CMakeLists.txt  LicenceInfoObject.h
cmake/: SparkAppimageConfig.cmake  SparkMacrosConfig.cmake  SparkMacrosExtendConfig.cmake  package-deb.descript  spark-deb-package.descript
src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/utils/LicenceInfoManage/: CMakeLists.txt  LicenceInfoManage.cpp
src/utils/LicenceInfoObject/: LicenceInfoObject.cpp
src/utils/NetworkRequest/: CMakeLists.txt  NetworkRequest.cpp  NetworkRequest.h
